MODON MRE BPDEV/force-app/main/default/objects/genesysps__Experience__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>