MODON MRE BPDEV/force-app/main/default/objects/genesysps__Experience__c/fields/Genesys_Sender_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Sender_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Sender Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>