MODON MRE BPDEV/force-app/main/default/objects/genesysps__Experience__c/fields/Genesys_Summary__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>