MODON MRE BPDEV/force-app/main/default/objects/genesysps__Experience__c/listViews/CX_Test_Queue_Experience.listView-meta.xml
<ListView>
    <fullName>CX_Test_Queue_Experience</fullName>
    <filterScope>Queue</filterScope>
    <label>CX Test Queue</label>
    <queue>CX_Test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>