MODON MRE BPDEV/force-app/main/default/objects/genesysps__Experience__c/listViews/Dump_Queue_Experience.listView-meta.xml
<ListView>
    <fullName>Dump_Queue_Experience</fullName>
    <filterScope>Queue</filterScope>
    <label>Dump Queue</label>
    <queue>Dump_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>